<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Biodata">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="182sp"
        android:layout_height="wrap_content"
        android:text="@string/nama_depan" />

     <TextView
         android:layout_width="192dp"
         android:layout_height="wrap_content"
         android:text="@string/nama_belakang" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_namaDepan"
            android:layout_width="182sp"
            android:layout_height="match_parent"
            android:inputType="text"
            android:lines="1"
            android:padding="10px" />

        <EditText
            android:id="@+id/edt_namaBelakang"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:inputType="text"
            android:lines="1"
            android:padding="10px" />

    </LinearLayout>>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10px"
        android:text="@string/tanggal_lahir" />

    <EditText
        android:id="@+id/edt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="1"
        android:padding="10px"
        android:text="Pilih Disini" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10px"
        android:text="Nomor Telepon" />

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:lines="1"
        android:padding="16px" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10px"
        android:text="@string/alamat" />

    <EditText
        android:id="@+id/edt_alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:lines="1"
        android:padding="10px" />


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Submit"
        android:paddingBottom="20sp" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="20sp"
        android:text="@string/results" />

</LinearLayout>







